package jeu;

public enum EtatJeu {
	EN_COURS, VICTOIRE, DEFAITE
}
