package jeu.objets;

public enum TypeFragment {
	MONTRE_GOUSSET, PIPE_BOIS, JOURNAL_INTIME, PLUME, MEDAILLON
}
